@@ -10,7 +10,6 @@ perl:
   - 5.20
   - 5.18
   - 5.16
-  - 5.14
 env: PERL_CPANM_OPT="--quiet --notest --force --skip-satisfied"
 before_install:
   - git clone git://github.com/haarg/perl-travis-helper
